# circlesim

./: .gitignore  CMakeLists.txt  build-baaf.sh  build-core-dbg.sh  build-core-prod.sh  build-debug.sh  build-release-static.sh  build-release.sh  build-viewer-dbg.sh  build-viewer-prod.sh  build.gyp
cmake/Modules/: FindLua51.cmake  FindLua52.cmake  FindLuabind.cmake
config/: alpha000_dirY.cfg  alpha000_dirZ.cfg  alpha100_dirY.cfg  alpha100_dirZ.cfg  parameters_case_1.cfg  parameters_case_2.cfg
doc/: debian-dev.txt  fedora-dev.txt
src/: CMakeLists.txt  config.cpp  config.hpp  csv.h  field_map.cpp  field_map.hpp  frame_controller_base.cpp  frame_controller_base.hpp  frame_controller_field.hpp  frame_controller_interaction.hpp  gradient.cpp  gradient.hpp  labmap.cpp  labmap.hpp  main.cpp  main.hpp  make_field_movie.cpp  output.cpp  output.hpp  plot.cpp  plot.hpp  render_cfg.cpp  response.cpp  response.hpp  script.cpp  script.hpp  simulator.cpp  simulator.hpp  time_controller.cpp  time_controller.hpp  time_controller_base.cpp  time_controller_base.hpp  time_controller_field.hpp  time_controller_interaction.cpp  time_controller_interaction.hpp  type.hpp  util.cpp  util.hpp  viewer.cpp
util/LuaState/include/: LuaReturn.h  LuaState.h
util/env/: set-env-baaf.sh
util/plot/: interaction_field_e_xz.ct2  interaction_field_e_yz.ct2  interaction_field_map_xy.ct2  interaction_field_map_xz.ct2  interaction_field_map_yz.ct2  interaction_field_x.ct2  interaction_mom_x.ct2  interaction_mom_y.ct2  interaction_mom_z.ct2  interaction_pos_z.ct2
util/plot/to_trash/: plot_3d_data.m  plot_position_2d.m
util/plot_interaction/: interaction_field_x.ct2  interaction_mom.ct2  interaction_mom_x.ct2  interaction_mom_y.ct2  interaction_mom_z.ct2  interaction_pos_x.ct2  interaction_pos_xy.ct2  interaction_pos_xz.ct2  interaction_pos_y.ct2  interaction_pos_yz.ct2
util/plot_interaction/to_trash/: plot_interaction.m
util/plot_interaction_field/: plot_xy_Bmod.ct2  plot_xy_Emod.ct2  plot_xy_Ex.ct2  plot_xy_Ey.ct2  plot_xy_Ez.ct2  plot_xz_Bmod.ct2  plot_xz_Emod.ct2  plot_yz_Bmod.ct2  plot_yz_Emod.ct2  plot_yz_Ex.ct2  plot_yz_Ey.ct2  plot_yz_Ez.ct2
util/unit/: ConfigUnitConvertor.java  build.sh  conversions.csv
